fix interface edit jumping

--- a/src/pages/ArticleEditorPage/ui/AddBlocksForm/AddBlocksForm.module.scss
+++ b/src/pages/ArticleEditorPage/ui/AddBlocksForm/AddBlocksForm.module.scss
@@ -10,6 +10,7 @@
   z-index: 2;
   padding: 16px;
   border: 1px solid var(--light-bg-redesigned);
+  min-height: 78px;
 }
 
 
@@ -19,5 +20,5 @@
   z-index: 2;
   padding: 16px;
   border: 1px solid var(--primary-color);
-
+  min-height: 72px;
 }
