--- a/src/pages/ArticleEditorPage/ui/ArticleEditorPage/ArticleEditorPage.module.scss
+++ b/src/pages/ArticleEditorPage/ui/ArticleEditorPage/ArticleEditorPage.module.scss
@@ -1,25 +1,9 @@
-.ArticleEditorPage {
-  padding: 10px;
-  padding-bottom: 20px;
-
-  min-width: 844px;
-
-  //flex-grow: 1;
-  ////padding: 20px 20px 20px 40px;
-  //height: calc(100vh - var(--navbar-height));
-  //overflow-y: auto;
-  //flex-shrink: 100;
-
-}
-
-.addLinkButton {
-   align-self: end;
-  min-width:178px;
-}
-
-.blockWrap {
-  flex-grow: 1;
-}
+//.ArticleEditorPage {
+//  padding: 10px;
+//  padding-bottom: 20px;
+//  //min-width: 844px;
+//
+//}
 
 
 
